Fixes admin spacing

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -8094,6 +8094,16 @@ html {
   .layout-container {
     margin-top: 160px;
   }
+}
+
+body.path-admin .layout-container {
+  margin-top: 0px;
+}
+
+@media (min-width: 992px) {
+  body.path-admin .layout-container {
+    margin-top: 0px;
+  }
 
   .layout-container.front-page {
     margin-top: 0px;
